# true-neutral

./: .gitignore  README.md  agent_attack_demo.py  attack_matrix.py  demo_script.py  pyproject.toml
agents/: alignments.json
agents/bureaucrat/: AGENTS.md  BOOT.md  BOOTSTRAP.md  CLAUDE.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
agents/compliance-bot/: AGENTS.md  BOOT.md  BOOTSTRAP.md  CLAUDE.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
agents/corporate-terminator/: AGENTS.md  BOOT.md  BOOTSTRAP.md  CLAUDE.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
agents/cowboy-coder/: AGENTS.md  BOOT.md  BOOTSTRAP.md  CLAUDE.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
agents/helpful-assistant/: AGENTS.md  BOOT.md  BOOTSTRAP.md  (+5 more)
demo/: agent_attack_demo.py  demo.py  demo.tape  demo_script.py  simulate_attacks.py
docs/: agents.md  flows.md  templates.md
results/: README.md  run-2026-03-02.json  run-2026-03-02.md
tests/: test_alignment.py  test_context.py  test_watcher.py
todos/: 001-pending-p1-path-traversal-api-agents-slug.md  002-pending-p2-no-validation-technique-vector-attack.md  003-pending-p2-sync-io-blocking-async-handlers.md  004-pending-p2-file-count-wrong-after-7-file-expansion.md  005-pending-p2-matrix-only-scores-claude-md.md  006-pending-p2-missing-security-headers.md  007-pending-p3-duplicate-loop-simulate-attack.md  008-pending-p3-dead-imports-watcher-in-web.md  009-pending-p3-unencoded-slug-in-fetch-urls.md  010-pending-p3-agents-dir-path-fragility.md  011-pending-p3-domain-logic-in-web-module.md  012-pending-p3-latent-dedup-bug-expand-persona-files.md
(+79 files in other folders)
